2011-11-15 tatuya
* Follow Gadget objects default validation sate changing, now they are public.

2011-06-09 gabriel.oliveira
* Force listbox page navigation to work

2011-06-08 gabriel.oliveira
* Add Xinha Editor as an option to Preferred Text Editor

2011-04-04 gabriel
* Add field to change the language of Web Site

2011-02-10 gabriel
* Add script ERP5Site_loadEmailThreadData to load the data of selected email. This script is used to open one email in the current page.
* Refactor ERP5Site_createNewEmailThread to do not create a new email if  it already exist one Email Thread created.

2011-02-09 gabriel
* Add logo to UNG Mail
* Add Form to compose a new email
* Refactor code to display in listbox the hour instead of the date when the email was created in current day
* Add javascript file to UNG Mail

2011-02-07 gabriel
* Initial commit to UNG Mail
* Added Web Section and form to Mail
* Add domain to UNG Mail

2011-02-04 gabriel
* Release 0.3 (r43019)
* Added UNG Calendar Prototype

2011-01-25 gabriel
* Add Web Section to UNG Calendar and added new form and css file for this section.

2011-01-19 gabriel
* Release 0.2 (r42537)

2010-01-17 gabriel
* Add CachingMethod to extract all subjects from all objects in Web Page Module

2010-01-17 gabriel
* Add CachingMethod to extract all subjects from all objects in Web Page Module

2010-01-10 gabriel
* Add gadget view on UNG template and added script to add a gadget

2010-01-07 gabriel
* Add dialog to display the list of gadget

2010-01-05 gabriel
* Add Domains and clean up the code that generates domains

2010-12-28 gabriel
* Added javascript code to be possible choose the theme to Spreadsheet editor and save it

2010-12-27 gabriel
* Implemented javascript code to be possible save all changes on enabled preferences.
* Clean up the code to remove some global variables

2010-12-27 gabriel
* Fix issue with search
* Add tag to display the document's key shared in the view page.