@@ -1,1 +1,2 @@
 The UNG Theme for ERP5. 
+Note: currently this bt5 heavily modifies Web Page portal type which might affect other ERP5 web themes.
