@@ -1,0 +1,3 @@
+Web Page | view
+Web Page | view_editor
+Web Page | web_view
